--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -74,3 +74,9 @@ h4 {
     text-align: center;
     font: normal 17px Poppins;
 }
+
+.navbar-brand.nav-link.active {
+    background-color: #85fc89;
+    color: white;
+    border-radius: 5px;
+}
