--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -64,7 +64,7 @@
 }
 
 .right {
-    margin-left: 750px;
+    margin-left: 700px;
     display: flex;
     flex-direction: row;
 }
@@ -77,6 +77,13 @@
 }
 
 .delete-button {
+    border: none;
+    background-color: white;
+    width: 40px;
+    height: 30px;
+}
+
+.dropdown {
     border: none;
     background-color: white;
     width: 40px;
