Added Update Button

--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -89,3 +89,12 @@
     width: 40px;
     height: 30px;
 }
+
+.dates {
+    display: flex;
+    flex: 1;
+}
+
+.update_button {
+    margin-left: 550px;
+}
